--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans');
 
+/* CSS Variables */
+
+:root {
+  --primary-color: purple;
+  --primary-color-hover: #d3071b;
+  --secondary-color: #103063;
+  --secondary-color-hover: #143f85;
+  --light-color: #f4f4f4;
+
+}
+
 body {
   font-family: 'PT Sans', sans-serif;
   background-color: #252529;
@@ -7,6 +18,36 @@ body {
   color: #fff;
   line-height: 1.6;
 
+}
+
+img {
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: purple;
+}
+
+
+/* section */
+
+.section {
+  padding: 2rem 0;
+}
+
+.section-head {
+  font-size: 2.5rem;
+  margin: 0;
+}
+
+.section h3 {
+  font-size: 2rem;
+}
+
+section#entertainment {
+  background: url(video1.jpg) no-repeat center/cover;
+  padding: 10rem 0;
 }
 
 /*showcase*/
@@ -44,6 +85,55 @@ body {
 
 .lead {
   font-size: 1.3rem;
+}
+
+.btn {
+  padding: 1rem;
+  color: #fff;
+  display: inline-block;
+}
+
+.btn-primary {
+  background: var(--primary-color);
+}
+
+.btn-primary:hover {
+  background: var(--primary-color-hover);
+}
+
+.btn-secondary {
+  background: var(--secondary-color);
+}
+
+.btn-secondary:hover {
+  background: var(--secondary-color-hover);
+}
+
+/* text colors*/
+
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-secondary {
+  color: var(--secondary-color);
+}
+
+.text-light {
+  color: var(--light-color);
+}
+
+.bg-light {
+  background: var(--light-color);
+  color: #333;
+}
+
+.mb {
+  margin-bottom: 1rem;
+}
+
+.mt {
+  margin-top: 1rem;
 }
 
 
@@ -99,6 +189,11 @@ nav a#openup {
   #showcase h2 {
     font-size: 1.5rem;
   }
+
+  section#entertainment {
+  background: url(video1.jpg) no-repeat center/cover;
+  padding: 3rem 0;
+}
 
   nav {
     height: auto;
