--- a/style.css
+++ b/style.css
@@ -290,6 +290,7 @@ nav a#openup {
 @media screen and (max-width: 780px) {
   .gift-cards {
   grid-template-columns: 1fr;
+  text-align: center;
   
 }
 
